# Version 0.6

* Fixed a bug that happens only when format.xml is given to blocks and then it
  acts as default, instead of format.html.
* Fixed a strange bug where when you have create.html.erb or update.html.erb,
  it makes IE6 and IE7 return unprocessable entity (because they send Mime::ALL).
* Stop rescueing any error when constantizing the resource class and allow
  route_prefix to be nil.
* Cleaned up tests and responder structure. Whenever you pass a block to aliases
  and this block responds to the request, the other blocks are not parsed improving performance.
* [BACKWARDS INCOMPATIBLE] By default, Inherited Resources respond only :html requests.
* Added a quick way to overwrite the redirect to url in :create, :update and :destroy.

# Version 0.5

* Decoupled routes name from :instance_name and :collection_name. This way we
  have more flexibility. Use route_instance_name and route_collection_name to
  to change routes.
* Avoid calling human_name on nil when a resource class is not defined.
* Only call I18n if it's defined.

# Version 0.4

* Dealing with namespaced controllers out of the box.
* Added support to namespaced routes through :route_prefix.
* Added fix when resource_url is not defined.
* Added better handling for namespaced controllers.
* Added flash messages scoped by namespaced controllers.
* Deprecated {{resource}} in I18n, use {{resource_name}} instead.
* rspec bug fix is not automatically required anymore. User has to do it
  explicitly.
* Added a file which fix a rspec bug when render is called inside a method
  which receives a block.
* parent? does not take begin_of_association_chain into account anymore
* Added options to url helpers.
* Added :optional to belongs_to associations. It allows you to deal with
  categories/1/products/2 and /products/2 with just one controller.
* Cleaned up tests.

# Version 0.3

* Minor bump after three bug fixes.
* Bug fix when showing warning of constant redefinition.