@@ -71,8 +71,9 @@ Gem::Specification.new do |s|
     "test/views/professors/new.html.erb",
     "test/views/professors/show.html.erb",
     "test/views/projects/index.html.erb",
-    "test/views/projects/respond_to_with_resource.html.erb",
+    "test/views/projects/index.json.erb",
     "test/views/projects/respond_to_skip_default_template.html.erb",
+    "test/views/projects/respond_to_with_resource.html.erb",
     "test/views/students/edit.html.erb",
     "test/views/students/new.html.erb",
     "test/views/users/edit.html.erb",
